--- a/src/styles/globals/index.less
+++ b/src/styles/globals/index.less
@@ -23,17 +23,21 @@ a {
   }
 }
 
+html,
 body {
   margin: 0;
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
   background-color: #f5f5f5;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 #root {
   width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
